# IUT-Lab-Kit

./: .gitignore  Cargo.toml  README.md
scripts/: build.bat  installer.iss
src/: app.rs  lib.rs  main.rs
src/cli/: commands.rs
src/core/: config.rs  mod.rs  test_runner.rs
src/models/: question.rs
src/modules/: config.rs  utils.rs
src/utils/: file_handler.rs
