[package]
name = "lab"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
glob = "0.3"
serde_json = "1.0"
cliclack = "0.1.6"
tokio = { version = "1.0", features = ["full"] }
